# Dictionary-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Language.h  README.md  TurkishLanguage.h  VectorizedWord.cpp  VectorizedWord.h  Word.cpp  Word.h  conanfile.py  conanfile.txt  dictionary.txt
Dictionary/: Compare.h  Dictionary.cpp  Dictionary.h  ExceptionalWord.cpp  ExceptionalWord.h  TestDictionary.cpp  TxtDictionary.cpp  TxtDictionary.h  TxtWord.cpp  TxtWord.h  VectorizedDictionary.cpp  VectorizedDictionary.h  Word.cpp  Word.h
Dictionary/Trie/: Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h
Language/: TurkishLanguage.h
Syllibification/: Syllable.cpp  Syllable.h  SyllableList.cpp  SyllableList.h
Test/: DictionaryTest.cpp  TrieTest.cpp  TxtDictionaryTest.cpp  TxtWordTest.cpp  WordTest.cpp
src/: CMakeLists.txt
src/Dictionary/: Dictionary.cpp  Dictionary.h  ExceptionalWord.cpp  ExceptionalWord.h  TxtDictionary.cpp  TxtDictionary.h  TxtWord.cpp  TxtWord.h  VectorizedDictionary.cpp  VectorizedDictionary.h  VectorizedWord.cpp  VectorizedWord.h  Word.cpp  Word.h
src/Dictionary/Trie/: Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h
src/Language/: TurkishLanguage.h
src/Syllibification/: IrregularWordException.cpp  IrregularWordException.h  Syllable.cpp  Syllable.h  SyllableList.cpp  SyllableList.h
